# galactic-playground

./: .gitignore  ARCHITECTURE.md
feasibility/kale/: CLAUDE.md  Cargo.toml
feasibility/kale/docs/: albedo_wallet.md  kale_contract.md
feasibility/kale/frontend/: build.js  package-lock.json  package.json  polyfills.js  tsconfig.json
feasibility/kale/frontend/public/: index.html  landing.html
feasibility/kale/frontend/src/: App.tsx  constants.ts  styles.ts  types.ts
feasibility/kale/frontend/src/components/: AccountSection.tsx  ContractInfo.tsx  FieldCard.tsx  FundingSection.tsx  HarvestSection.tsx  Header.tsx  PlantSection.tsx  TransactionProgress.tsx  TrustlineSection.tsx  WorkSection.tsx
feasibility/kale/frontend/src/hooks/: useAuth.ts  useTransactions.ts  useUserData.ts
feasibility/kale/frontend/src/utils/: mining.ts
feasibility/kale/src/: albedo.rs  main.rs  rpc.rs
feasibility/kale/src/contracts/: kale.rs  mod.rs
