[package]
name = "galacticplayground"
version = "0.1.0"
edition = "2021"

[dependencies]
stellar-rpc-client = "22.0.0"
stellar-xdr = { version = "22.0.0", features = ["curr"] }
stellar-strkey = "0.0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
hex = "0.4"
sha3 = "0.10.8"
reqwest = "0.11"

[dev-dependencies]
